# controllers/auth/current.ts
@@ -1,0 +1,13 @@
+import { Response } from 'express';
+import { CustomRequest } from '../../types/express';
+import ctrlWrapper from '../../utils/ctrlWrapper';
+
+const current = async (req: CustomRequest, res: Response) => {
+  if (!req.user) {
+    res.status(401).json({ message: 'Unauthorized' });
+    return;
+  }
+  const { email, token, profile } = req.user;
+  res.status(201).json({ token, user: { ...profile, email } });
+};
+export default ctrlWrapper(current);
