# routes/auth.ts
@@ -5,11 +5,13 @@ import signup from '../controllers/auth/signup';
 import signIn from '../controllers/auth/signin';
 import authentication from '../middlewares/authentication';
 import signout from '../controllers/auth/signout';
+import current from '../controllers/auth/current';
 
 const router = express.Router();
 
 router.post('/signup', validateBody(schemaSignup), signup);
 router.post('/signin', validateBody(schemaSignIn), signIn);
 router.post('/signout', authentication, signout);
+router.get('/current', authentication, current);
 
 export default router;
